--- a/web/index.html
+++ b/web/index.html
@@ -5,38 +5,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
 <script type="text/javascript" src="/eel.js"></script>
 <script type="text/javascript" src="main.js"></script>
-<style>
 
-</style>
-<body>
+<body onload="startTime()">
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Ara Fasaka
-  </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-xxxlarge w3-animate-top">I'm Here </h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <br>
-    <center>
+  <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+    <div class="w3-display-topleft w3-padding-large w3-xlarge">
+      Ara Fasaka
+    </div>
+    <div class="w3-display-middle">
+      <div class="time">
+        <span id="time">ERROR</span>
+        <br>
+        <span id="date">ERROR</span>
+      </div>
+      <center>
+        <h1 class="w3-xxlarge w3-animate-top">I'm Here For You</h1>
+        <hr class="w3-border-grey" style="margin:auto;width:40%">
+        <br>
         <button type="button" class="btn btn-light" onclick=" ask();">ASK ME!!!</button>
-    </center>
-    <br>
-    <div style="text-align: left">
-        <h1 class="w3-large w3-animate-top">assistant </h1>
+        <br><br>
+        <form>
+          <input placeholder="Your Name" id="NamaPenggunga" type="text" onkeyup="checkOnKeyUpNama()">
+        </form>
+        <br>
+        <input readonly name="human" type="text" id="human" size="30" value="say something.." />
+        <br><br>
+        <textarea readonly name="computer" type="text" rows="6" cols="30" id="computer">
+      Listening..
+    </textarea>
+      </center>
     </div>
-    <div style="text-align: right">
-        <input type="text"  name="human" id="human" />
-        <p id="human" name="human" style="color:rgb(250, 191, 119)"class="w3-large w3-animate-top" ></p>
-    </div>
-  </div>
 
-</div>
+  </div>
 
 </body>
 <script type="text/javascript" src="main.js"></script>
+
 </html>
