--- a/web/help.html
+++ b/web/help.html
@@ -23,26 +23,25 @@
         <br>
         <span id="date">ERROR</span>
       </div>
-      <center>
-        <h1 class="w3-xxlarge w3-animate-top">I'm Here For You</h1>
-        <hr class="w3-border-grey" style="margin:auto;width:40%">
-        <br>
-        <button type="button" class="btn btn-light" onclick=" ask();">ASK ME!!!</button>
-        <br><br>
-        <form>
-          <input placeholder="Your Name" id="NamaPenggunga" type="text" onkeyup="checkOnKeyUpNama()">
-        </form>
-        <br>
-        <input readonly name="human" type="text" id="human" size="30" value="say something.." />
-        <br><br>
-        <textarea readonly name="computer" type="text" rows="6" cols="30" id="computer">
-      Listening..
-    </textarea><br>
-    <a style="color: white;" href="help.html">HELP</a>
-    <!-- <button onclick="Helppage()">Replace document</button> -->
-      </center>
-    </div>
-    
+    <center>
+        <div class="col-sm-9">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title" style="color: black;">Personal Assistant</h5>
+                <p>
+                <ul class="b">
+                    <li>I speak in english </li>
+                    <li>I will call you by the name you wrote in the "your name" box</li>
+                    <li>Press the "ask me" button to start asking for something  </li>
+                    <li>You have to say "hello" as the keyword before asking what you need </li>
+                    <li>I can do what you need related to date & time, calendar events, google search, wikipedia, youtube, playing songs, doing calculations, opening documents, making notes, opening an online shop, translation, sharing jokes, weather prediction, searching for locations on the map, and system power</li>
+                    </ul>
+                </p>
+                    <a href="index.html"class="btn btn-dark btn-sm">Go back</a>
+              </div>
+            </div>
+    </center>
+</div>
   </div>
 
 </body>
