--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
         <textarea readonly name="computer" type="text" rows="6" cols="30" id="computer">
       Listening..
     </textarea><br>
+    <a style="color: white;" href="account.html">CHANGE ACCOUNT</a><br>
     <a style="color: white;" href="help.html">HELP</a>
     <!-- <button onclick="Helppage()">Replace document</button> -->
       </center>
