--- a/web/account.html
+++ b/web/account.html
@@ -28,17 +28,10 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title" style="color: black;">Personal Assistant</h5>
-                <p>
-                <ul class="b">
-                    <li>I speak in english </li>
-                    <li>I will call you by the name you wrote in the "your name" box</li>
-                    <li>Press the "ask me" button to start asking for something  </li>
-                    <li>You have to say "hello" as the keyword before asking what you need </li>
-                    <li>I can do what you need related to date & time, calendar events, google search, wikipedia, youtube, playing songs, doing calculations, opening documents, making notes, opening an online shop, translation, sharing jokes, weather prediction, searching for locations on the map, and system power</li>
-                    </ul>
-                </p>
-                    <a style="color: rgb(8, 129, 185);" href="help.html">WHAT CAN I DO FOR YOU?</a><br><br>
-                    <a href="index.html"class="btn btn-dark btn-sm">Go back</a>
+                  <input readonly name="validate_acc" type="text" id="validate_acc" value="" /><br>
+                  <a style="color: rgb(0, 129, 180); font-size: 12px;" href="https://puu.sh/HamKN.png" target="_blank">HOW?</a><br><br>
+                    <button type="button" class="btn btn-dark btn-sm" onclick=" signout();">SIGN OUT</button>
+                    <a href="index.html"class="btn btn-dark btn-sm">GO BACK</a>
               </div>
             </div>
     </center>
