sedikit pembaruan pembukaan dokumen sama ganti nama wake

--- a/web/help.html
+++ b/web/help.html
@@ -37,7 +37,7 @@
                     <li>I can do what you need related to date & time, calendar events, google search, wikipedia, youtube, playing songs, doing calculations, opening documents, making notes, opening an online shop, translation, sharing jokes, weather prediction, searching for locations on the map, and system power</li>
                     </ul>
                 </p>
-                    <a style="color: rgb(8, 129, 185);" href="help.html">WHAT CAN I DO FOR YOU?</a><br><br>
+                    <a style="color: rgb(8, 129, 185);" href="https://drive.google.com/file/d/1pq2YT8OJO_nSK_D2RcvpZvtLM0BbymhN/view?usp=sharing" target="_blank">WANT TO KNOW WHAT I CAN DO?</a><br><br>
                     <a href="index.html"class="btn btn-dark btn-sm">Go back</a>
               </div>
             </div>
